--- a/index.html
+++ b/index.html
@@ -2,43 +2,28 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>3D AR Viewer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scene Viewer AR</title>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
     <style>
-        /* 画面全体の高さを100%に固定 */
-        html, body { 
-            height: 100%; 
-            margin: 0; 
-            padding: 0;
-            overflow: hidden; 
-        }
-        model-viewer {
-            width: 100%;
-            height: 100%; /* vhではなく%を使う */
-            background-color: #f0f0f0;
-        }
+        body { margin: 0; height: 100vh; overflow: hidden; }
+        model-viewer { width: 100%; height: 100%; background-color: #eee; }
 
-        /* ARボタン：あえて少し「上」に配置して隠れるのを防ぐ */
+        /* ボタンを画面下中央に固定 */
         #ar-button {
-            position: absolute;
-            bottom: 80px;   /* 下から80px（かなり上に上げる） */
+            position: fixed;
+            bottom: 50px;
             left: 50%;
             transform: translateX(-50%);
-            padding: 16px 32px;
-            background-color: #007bff;
+            padding: 15px 35px;
+            background-color: #4285f4;
             color: white;
             border: none;
-            border-radius: 50px;
+            border-radius: 30px;
             font-size: 18px;
             font-weight: bold;
-            z-index: 99999;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-        }
-
-        /* ボタンが消えるのを防ぐために、あえて強制表示させる */
-        model-viewer #ar-button {
-            display: block !important;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            z-index: 1000;
         }
     </style>
 </head>
@@ -48,12 +33,11 @@
         src="dance.glb" 
         ios-src="dance.usdz" 
         ar 
-        ar-modes="webxr scene-viewer quick-look" 
-        camera-controls 
-        interaction-prompt="auto">
+        ar-modes="scene-viewer webxr quick-look" 
+        camera-controls>
         
         <button slot="ar-button" id="ar-button">
-            タップしてARを開始
+            ARで表示する
         </button>
 
     </model-viewer>
