--- a/index.html
+++ b/index.html
@@ -2,28 +2,48 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
     <title>Scene Viewer AR</title>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
     <style>
-        body { margin: 0; height: 100vh; overflow: hidden; }
-        model-viewer { width: 100%; height: 100%; background-color: #eee; }
+        /* 画面全体のスクロールを禁止して固定する */
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            background-color: #eee;
+        }
 
-        /* ボタンを画面下中央に固定 */
+        model-viewer {
+            width: 100%;
+            height: 100%;
+        }
+
+        /* ボタンの配置設定 */
         #ar-button {
-            position: fixed;
-            bottom: 50px;
+            display: block;
+            position: fixed;   /* 画面に対して絶対位置で固定 */
+            bottom: 120px;     /* 下からかなり余裕を持って上げる（はみ出し防止） */
             left: 50%;
-            transform: translateX(-50%);
-            padding: 15px 35px;
+            transform: translateX(-50%); /* 左右中央 */
+            
+            padding: 16px 32px;
             background-color: #4285f4;
             color: white;
             border: none;
-            border-radius: 30px;
+            border-radius: 50px;
             font-size: 18px;
             font-weight: bold;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-            z-index: 1000;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+            z-index: 9999;     /* 最前面に配置 */
+            white-space: nowrap; /* 改行禁止 */
+        }
+
+        /* ARが利用できない時は隠す */
+        model-viewer:not([ar-visible]) #ar-button {
+            display: none;
         }
     </style>
 </head>
@@ -34,7 +54,8 @@
         ios-src="dance.usdz" 
         ar 
         ar-modes="scene-viewer webxr quick-look" 
-        camera-controls>
+        camera-controls 
+        interaction-prompt="auto">
         
         <button slot="ar-button" id="ar-button">
             ARで表示する
