--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         src="dance.glb" 
         ios-src="dance.usdz" 
         ar 
-        ar-modes="webxr scene-viewer quick-look" 
+    　  ar-modes="scene-viewer webxr quick-look"         
         camera-controls 
         autoplay
         auto-rotate
