--- a/index.html
+++ b/index.html
@@ -3,46 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D AR Viewer</title>
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
+    <title>Scene Viewer AR</title>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
     <style>
-        body { margin: 0; background-color: #f8f9fa; font-family: 'Helvetica Neue', Arial, sans-serif; }
-        
-        model-viewer {
-            width: 100vw;
-            height: 100vh;
-            display: block;
-        }
+        body { margin: 0; height: 100vh; overflow: hidden; }
+        model-viewer { width: 100%; height: 100%; background-color: #eee; }
 
-        /* 自作ARボタンのスタイル */
-        #custom-ar-button {
-            background-color: #4285f4; /* Google Blue */
-            color: white;
-            border-radius: 30px;
-            border: none;
-            padding: 12px 24px;
-            font-size: 16px;
-            font-weight: bold;
-            position: absolute;
+        /* ボタンを画面下中央に固定 */
+        #ar-button {
+            position: fixed;
             bottom: 50px;
             left: 50%;
             transform: translateX(-50%);
-            white-space: nowrap;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-            cursor: pointer;
-            z-index: 100;
-        }
-
-        #custom-ar-button:active {
-            background-color: #3367d6;
-        }
-
-        /* ARが利用できない環境ではボタンを非表示にする（model-viewerが自動制御） */
-        model-viewer:not(.ar-ready) #custom-ar-button {
-            display: none;
+            padding: 15px 35px;
+            background-color: #4285f4;
+            color: white;
+            border: none;
+            border-radius: 30px;
+            font-size: 18px;
+            font-weight: bold;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            z-index: 1000;
         }
     </style>
 </head>
@@ -53,14 +34,10 @@
         ios-src="dance.usdz" 
         ar 
         ar-modes="scene-viewer webxr quick-look" 
-        camera-controls 
-        autoplay
-        shadow-intensity="1" 
-        alt="ARモデル">
+        camera-controls>
         
-        <button slot="ar-button" id="custom-ar-button">
-            <span style="font-size: 20px;">📦</span>
-            目の前に表示する（AR）
+        <button slot="ar-button" id="ar-button">
+            ARで表示する
         </button>
 
     </model-viewer>
