--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>3D Experience</title>
+    <title>3D AR Experience</title>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
     <style>
-        /* 全体の雰囲気：落ち着いたグレー */
         html, body { height: 100%; margin: 0; overflow: hidden; background: radial-gradient(#ffffff, #d7d7d7); }
-        model-viewer { width: 100%; height: 100%; --poster-color: transparent; }
+        model-viewer { width: 100%; height: 100%; }
 
-        /* 💡 ARボタン：モダンなグラデーションと浮遊感 */
+        /* 💡 ARボタン：反応を最優先にする設定 */
         #ar-button {
             position: absolute;
             bottom: 100px;
@@ -23,59 +22,22 @@
             border-radius: 100px;
             font-size: 16px;
             font-weight: 600;
-            letter-spacing: 1px;
-            z-index: 999;
+            z-index: 9999; /* 重なり順を最強にする */
             box-shadow: 0 10px 20px rgba(66, 133, 244, 0.3);
-            display: flex;
-            align-items: center;
-            gap: 12px;
+            display: block !important; /* 強制表示 */
             cursor: pointer;
-            transition: all 0.3s ease;
-            white-space: nowrap;
+            pointer-events: auto !important; /* クリックを確実に受け付ける */
         }
 
-        #ar-button:active {
-            transform: translateX(-50%) scale(0.95);
-            box-shadow: 0 5px 10px rgba(66, 133, 244, 0.2);
-        }
+        /* 💡 ここが原因だった可能性が高いので削除・修正済み */
+        /* model-viewer:not(.ar-ready) #ar-button { ... } を削除しました */
 
-        /* 💡 プログレスバー：細くて洗練されたデザイン */
+        /* 読み込みバー */
         .progress-bar {
-            display: block;
-            width: 100%;
-            height: 4px;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: rgba(0, 0, 0, 0.05);
+            display: block; width: 100%; height: 4px; position: absolute; top: 0; left: 0; background: rgba(0, 0, 0, 0.1);
         }
-
         .update-bar {
-            background: linear-gradient(90deg, #4285f4, #34a853, #fbbc05, #ea4335);
-            background-size: 200% 100%;
-            animation: shimmer 2s infinite linear;
-            width: 0%;
-            height: 100%;
-            transition: width 0.3s;
-        }
-
-        @keyframes shimmer {
-            0% { background-position: 100% 0; }
-            100% { background-position: -100% 0; }
-        }
-
-        /* モデル読み込み中の「ふわふわ」待機アニメーション */
-        @keyframes floating {
-            0% { transform: translateY(0px); }
-            50% { transform: translateY(-10px); }
-            100% { transform: translateY(0px); }
-        }
-
-        /* AR非対応時はボタンを半透明にする（完全に消すと寂しいため） */
-        model-viewer:not(.ar-ready) #ar-button {
-            opacity: 0.5;
-            filter: grayscale(1);
-            pointer-events: none;
+            background: #4285f4; width: 0%; height: 100%; transition: width 0.3s;
         }
     </style>
 </head>
@@ -88,24 +50,14 @@
         ar-modes="scene-viewer webxr quick-look" 
         camera-controls 
         autoplay
-        auto-rotate
-        rotation-pivot="0 0 0"
-        shadow-intensity="1.5"
-        shadow-softness="1"
-        environment-image="neutral"
-        exposure="1"
-        alt="AR 3D Model Experience">
+        shadow-intensity="1">
         
         <div slot="progress-bar" class="progress-bar">
             <div class="update-bar"></div>
         </div>
 
         <button slot="ar-button" id="ar-button">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                <path d="M7 19h10V5H7v14zm0-16h10c1.1 0 2 .9 2 2v14c0 1.1-.9 2-2 2H7c-1.1 0-2-.9-2-2V5c0-1.1.9-2 2-2z"/>
-                <path d="M0 0h24v24H0z" fill="none"/>
-            </svg>
-            ARで体験する
+            タップしてARを開始
         </button>
 
     </model-viewer>
